# pelican-similar-articles-light

./: Makefile  README.md  setup.cfg
pelican/plugins/similar_articles_light/: __init__.py  similar_articles.py
