[metadata]
name = pelican-similar-articles-light
version = attr: pelican.plugins.similar_articles_light.__version__
description = A Pelican plugin to provide a support of similar articles, allowing users to access a list of articles linked to each article by a similarity calculation # on their tags.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ysard
author_email = ysard@users.noreply.github.com
url = https://github.com/ysard/pelican-similar-articles-light

license_files = LICENSE
keywords = pelican
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[options]
zip_safe = False
include_package_data = True
packages = pelican.plugins.similar_articles_light
install_requires =
    pelican

[options.extras_require]
dev =
    pytest-cov>=2.6.1
    pytest>=5.2.0
    pytest-runner
    zest.releaser[recommended]

[zest.releaser]
create-wheel = no
python-file-with-version = pelican/plugins/similar_articles_light/__init__.py

[aliases]
test=pytest
